# atlas_once

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent_onboarding.md  architecture.md  cli_reference.md  feature_checklist.md  human_onboarding.md  install_and_profiles.md  ranked_contexts.md
src/atlas_once/: __init__.py  agent_context.py  atlas.py  bundles.py  cli.py  cli_ui.py  code_intelligence.py  config.py  dashboard.py  fleet.py  git_health.py  inbox.py  index_watcher.py  intelligence_service.py  markdown_ctx.py  memory.py  mix_ctx.py  multi_ctx.py  nav.py  notes.py  ranked_context.py  registry.py  runtime.py  shadow_workspace.py  shell.py  templates.py  util.py  workflows.py
src/atlas_once/profiles/: __init__.py  base.py  ranked_contexts.py
src/atlas_once/profiles/default/: __init__.py
src/atlas_once/profiles/nshkrdotcom/: __init__.py
tests/: conftest.py  test_atlas.py  test_cli_ui.py  test_code_intelligence.py  test_console_scripts.py  test_ctx.py  test_docday.py  test_fleet_control.py  test_index_cli.py  test_index_integration_failures.py  test_index_watcher.py  test_intelligence_service.py  test_markdown_context.py  test_mcc.py  test_memory.py  test_ranked_context.py  test_repo_registry_and_context_profiles.py  test_shadow_paths.py
